# PluginManager

./: CMakeLists.txt  LICENSE  README.md
app/plugin_manager/: CMakeLists.txt  main.cpp
cmake/: FindPOCO.cmake
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/: core.hpp  gpu_module.hpp
modules/core/src/: core.cpp  gpu_module.cpp
modules/plugin_manager/: CMakeLists.txt
modules/plugin_manager/include/: gpu_module.hpp  plugin.hpp  plugin_cache.hpp  plugin_info.hpp  plugin_library.hpp  plugin_manager.hpp  plugin_set.hpp
modules/plugin_manager/src/: gpu_module.cpp  plugin.cpp  plugin.hpp  plugin_cache.cpp  plugin_manager.cpp  plugin_set.cpp
modules/utility/: CMakeLists.txt
modules/utility/include/: platform.h  utility.hpp
modules/utility/src/: atomic_counter.cpp  environment.cpp  mutex.cpp  path.cpp  shared_library.cpp  utility.cpp
plugins/gpu/cuda/: CMakeLists.txt
plugins/gpu/cuda/arithm/: CMakeLists.txt  cuda_arithm.cpp  cuda_arithm.cu
plugins/gpu/cuda/main/: CMakeLists.txt  cuda_main.cpp
plugins/gpu/cuda/npp/: CMakeLists.txt  cuda_npp.cpp
sample/: CMakeLists.txt  main.cpp
utility/: CMakeLists.txt
utility/plugin_cache/: CMakeLists.txt  main.cpp
